samples/_failures_safe/1761664941_2d5f69_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_791b4cc0.c: In function ‘main’:
./samples/SAFE/__tmp_791b4cc0.c:148:17: error: expected ‘;’ at end of input
  148 |     input_matrix
      |                 ^
      |                 ;
./samples/SAFE/__tmp_791b4cc0.c:148:5: error: expected declaration or statement at end of input
  148 |     input_matrix
      |     ^~~~~~~~~~~~
